--- a/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/Login.form
+++ b/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/Login.form
@@ -111,6 +111,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="1e" green="1e" red="1e" type="rgb"/>
             </Property>
+            <Property name="actionCommand" type="java.lang.String" value="login"/>
             <Property name="cor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
@@ -122,15 +123,18 @@
         </Component>
         <Component class="com.mycompany.autostockcar.view.componentes.CampoDeTexto" name="txLoginUsuario">
           <Properties>
-            <Property name="toolTipText" type="java.lang.String" value=""/>
-            <Property name="cor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="1e" green="1e" red="1e" type="rgb"/>
             </Property>
+            <Property name="toolTipText" type="java.lang.String" value=""/>
             <Property name="corTexto" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="c8" green="c8" red="c8" type="rgb"/>
             </Property>
             <Property name="dicas" type="java.lang.String" value="Usu&#xe1;rio"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txLoginUsuarioActionPerformed"/>
+          </Events>
         </Component>
         <Component class="com.mycompany.autostockcar.view.componentes.Botao" name="btnLoginLogin">
           <Properties>
